--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       <nav class="navigation">
         <ul class=" list navigation-link">
           <li> <a href="./index.html " class="logo"><span class="logo-s">Web</span><span class="logo-studio">Studio</span></a></li>
-          <li class=" navigation-item"><a href="./index.html" class="base-header"  >Студия</a></li>
-          <li class=" navigation-item"><a href="./portfolio.html" class="base-header"  >Портфолио</a></li>
+          <li class=" navigation-item"><a href="./index.html" class="base-header">Студия</a></li>
+          <li class=" navigation-item"><a href="./portfolio.html" class="base-header">Портфолио</a></li>
           <li class=" navigation-item"><a href="" class="base-header">Контакты</a></li>
         </ul>
       </nav>
@@ -69,8 +69,7 @@
         </li>
       </ul>
     </section>
-    <section>
-
+    <section >
       <h2 class="section-job-h">Чем мы занимаемся</h2>
       <ul class="list">
         <li>
@@ -84,7 +83,7 @@
         </li>
       </ul>
     </section>
-    <section>
+    <section class="section-font" >
       <h2 class="section-job-h">Наша команда</h2>
       <ul class="list">
         <li>
