--- a/portfolio.html
+++ b/portfolio.html
@@ -44,64 +44,63 @@
         </ul>
         <ul class="list">
           <li>
-            <!-- Обгорнути в посилання 3 елемента -->
-          <div><a href="">
+          <div><a href="" class="projekts-dekor">
           <img  src="./images/project9.jpg"   alt="Фото проекту" width="370" />
           <h3 class="projekts-h">Технокряк</h3>
           <p class="projekts-p">Веб-сайт</p></a>
           </div>
           </li>
           <li>
-            <div><a href="">
+            <div><a href="" class="projekts-dekor">
             <img src="./images/project8.jpg" alt="Фото проекту" width="370" />
             <h3  class="projekts-h">Постер New Orlean vs Golden Star</h3>
             <p  class="projekts-p">Дизайн</p></a>
             </div>
           </li>
           <li>
-            <div><a href="">
+            <div><a href="" class="projekts-dekor" >
             <img src="./images/project7.jpg" alt="Фото проекту " width="370" />
             <h3 class="projekts-h">Ресторан Seafood</h3>
             <p  class="projekts-p">Приложение</p></a>
             </div>
           </li>
           <li>
-            <div><a href="">
+            <div><a href="" class="projekts-dekor">
             <img src="./images/project6.jpg" alt="Фото проекту " width="370" />
             <h3  class="projekts-h">Проект Prime</h3>
             <p  class="projekts-p">Маркетинг</p></a>
             </div>
           </li>
           <li>
-            <div><a href="">
+            <div><a href="" class="projekts-dekor">
             <img src="./images/project5.jpg" alt=" Фото проекту" width="370" />
             <h3 class="projekts-h">Проект Boxes</h3>
             <p  class="projekts-p">Приложение</p></a>
             </div>
           </li>
           <li>
-            <div><a href="">
+            <div><a href="" class="projekts-dekor">
             <img src="./images/project4.jpg" alt="Фото проекту " width="370" />
             <h3  class="projekts-h">Inspiration has no Borders</h3>
             <p  class="projekts-p">Веб-сайт</p></a>
             </div>
           </li>
           <li>
-            <div><a href="">
+            <div><a href="" class="projekts-dekor">
             <img src="./images/project3.jpg" alt=" Фото проекту" width="370" />
             <h3  class="projekts-h">Издание Limited Edition</h3>
             <p  class="projekts-p">Дизайн</p></a>
             </div>
           </li>
           <li>
-            <div><a href="">
+            <div><a href="" class="projekts-dekor">
             <img src="./images/project2.jpg" alt="Фото проекту " width="370" />
             <h3  class="projekts-h">Проект LAB</h3>
             <p  class="projekts-p">Маркетинг</p></a>
             </div>
           </li>
           <li> 
-            <div><a href="">
+            <div><a href="" class="projekts-dekor">
             <img src="./images/project1.jpg" alt="Фото проекту " width="370" />
             <h3 class="projekts-h">Growing Business</h3>
             <p class="projekts-p">Приложение</p></a>
